--- a/index.html
+++ b/index.html
@@ -299,38 +299,24 @@
         }
 
         async function generateApplicationTip() {
-            const tipDisplayElement = document.getElementById('admissions-tip-display');
-            tipDisplayElement.innerHTML = '<span class="text-slate-500">Generating tip... ✨</span>';
+    const tipDisplayElement = document.getElementById('admissions-tip-display');
+    tipDisplayElement.innerHTML = '<span class="text-slate-500">Generating tip... ✨</span>';
 
-            const prompt = `Generate a short, actionable tip (1-2 sentences) for a student applying to IT or Computer Science undergraduate programs in Brazil for the 2nd semester of 2025. Focus on a practical piece of advice.`;
-            let chatHistory = [];
-            chatHistory.push({ role: "user", parts: [{ text: prompt }] });
-            const payload = { contents: chatHistory };
-            const apiKey = ""; // Canvas will provide this at runtime
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
-
-            try {
-                const response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(payload)
-                });
-                const result = await response.json();
-                if (result.candidates && result.candidates.length > 0 &&
-                    result.candidates[0].content && result.candidates[0].content.parts &&
-                    result.candidates[0].content.parts.length > 0) {
-                    const tipText = result.candidates[0].content.parts[0].text;
-                    generatedAdmissionsTips.push(tipText); // Cache the tip
-                    tipDisplayElement.innerHTML = `<p class="text-slate-700 italic">${tipText}</p>`;
-                } else {
-                    tipDisplayElement.innerHTML = '<p class="text-red-500">Could not generate tip. (Unexpected structure)</p>';
-                }
-            } catch (error) {
-                console.error("Error calling Gemini API for tip:", error);
-                tipDisplayElement.innerHTML = '<p class="text-red-500">Error connecting to AI service. Try again.</p>';
-            }
-        }
-
+    try {
+        const response = await fetch('https://gemini-proxy.yourusername.repl.co/generate-tip', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+                prompt: "Generate a short, actionable tip (1-2 sentences) for a student applying to IT or Computer Science undergraduate programs in Brazil for the 2nd semester of 2025."
+            })
+        });
+        const data = await response.json();
+        tipDisplayElement.innerHTML = `<p class="text-slate-700 italic">${data.tip}</p>`;
+    } catch (error) {
+        console.error("Error fetching tip:", error);
+        tipDisplayElement.innerHTML = '<p class="text-red-500">Error connecting to backend. Try again later.</p>';
+    }
+}
         document.addEventListener('DOMContentLoaded', () => {
             const opportunitiesGrid = document.getElementById('opportunities-grid');
             const filterContainer = document.getElementById('filter-container');
