--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Chosen Palette: Warm Neutrals & Subtle Accents -->
     <!-- Application Structure Plan: A dashboard-centric, single-page application designed for task-oriented exploration. The structure prioritizes immediate access to actionable information for prospective students.
-        1. Header & Navigation: A sticky header with the application title and navigation buttons that smoothly scroll to the relevant sections.
+        1. Header & Navigation: A sticky header with the application title and navigation buttons that smoothly scroll to the relevant sections. Now includes a link to the Thailand Master's page.
         2. Overview Dashboard: A high-level view with key metrics (total vacancies, open editais) and a primary chart showing the distribution of admission routes. This gives users an instant summary of the landscape described in the report, and now includes a dynamic admissions tip generator.
         3. Interactive Opportunities Hub: A filterable list of all institutions mentioned in the report. Users can filter by 'Open', 'Closed', or 'Special' status. This is the core interactive component, allowing users to drill down into the specific data. Clicking an item reveals detailed information and a link to the official source.
         4. Admission Pathways Explained: A section using styled cards to clearly explain the main routes (Vestibular, SISU, Transfer), providing essential context for users unfamiliar with the Brazilian system.
@@ -79,6 +79,7 @@
                     <button data-target="dashboard" class="nav-btn px-4 py-2 rounded-md text-sm font-semibold text-slate-600 hover:bg-slate-200 transition-colors">Dashboard</button>
                     <button data-target="opportunities" class="nav-btn px-4 py-2 rounded-md text-sm font-semibold text-slate-600 hover:bg-slate-200 transition-colors">Opportunities</button>
                     <button data-target="pathways" class="nav-btn px-4 py-2 rounded-md text-sm font-semibold text-slate-600 hover:bg-slate-200 transition-colors">Pathways</button>
+                    <a href="thailand-masters-it-spa.html" class="px-4 py-2 rounded-md text-sm font-semibold text-slate-600 hover:bg-slate-200 transition-colors" target="_blank">Masters in Thailand</a>
                 </nav>
             </div>
         </div>
