Confirming the Update index.html

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
 
-        // Your web app's Firebase configuration - DO NOT CHANGE THESE VALUES
+        // Your web app Firebase configuration - DO NOT CHANGE THESE VALUES
         const firebaseConfig = {
             apiKey: "VITE_FIREBASE_API_KEY_PLACEHOLDER",
             authDomain: "it-scholarship-436d1.firebaseapp.com",
